Change to homepage

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World
-    <h1>Hello world</h1>
-    <h2>Hello world</h2>
+  Home page
+  <br>
+  <a href="index.html">homepage</a>
+  <a href="./seasons/winter.html">Winter</a>
+  <a href="/HTML/seasons/summer.html">Summer</a>
 </body>
 </html>
