--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,7 +8,7 @@
 <body>
   Home page
   <br>
-  <a href="index.html">homepage</a>
+  <a href="#">homepage</a>
   <a href="./seasons/winter.html">Winter</a>
   <a href="/HTML/seasons/summer.html">Summer</a>
 </body>
