--- a/test.html
+++ b/test.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    This is Summer page!!
-    <br>
-    <a href="../index.html">homepage</a>
-    <a href="./winter.html">Winter</a>
-    <a href="#">Summer</a>
+    <h1>Hello World </h1>
+    Hello World 🐝 🐤 🐓 🍎
 </body>
-
 </html>
